--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "backend": "json-server --watch db/db.json"
   },
   "dependencies": {
+    "json-server": "^0.17.1",
     "vue": "^3.2.45"
   },
   "devDependencies": {
